--- a/shark.opam
+++ b/shark.opam
@@ -5,6 +5,8 @@ depends: [
   "ocaml"
   "obuilder"
   "vpnkit"
+  # for vpnkit and obuilder interop: mirage-flow and lwt
+  "protocol-9p" {>= "2.0.2"}
 ]
 build: [
   ["dune" "subst"] {dev}
