--- a/vpnkit/vpnkit.opam
+++ b/vpnkit/vpnkit.opam
@@ -35,7 +35,7 @@ depends: [
   "base64" {>= "3.5.0"}
   "cstruct" {>= "6.0.0"}
   "pcap-format" {>= "0.4.0"}
-  "cmdliner" {< "1.1.0"}
+  "cmdliner"
   "charrua" {>= "1.3.0"}
   "charrua-client"
   "charrua-server"
@@ -44,7 +44,7 @@ depends: [
   "logs"
   "fmt"
   "astring"
-  "ethernet" {>= "3.0.0"}
+  "ethernet" {= "3.0.0"}
   "arp" {>= "3.0.0"}
   "mirage-entropy" {>= "0.5.0"}
   "mirage-kv" {>= "4.0.0"}
