got vpnkit building

--- a/vpnkit/src/dns_lwt/dune
+++ b/vpnkit/src/dns_lwt/dune
@@ -1,4 +1,4 @@
 (library
   (name        dns_lwt)
-  (libraries   dns lwt mirage-profile)
+  (libraries   vpnkit_dns lwt mirage-profile)
   (wrapped     false))
