--- a/vpnkit/src/dns/dune
+++ b/vpnkit/src/dns/dune
@@ -1,4 +1,4 @@
 (library
-  (name        dns)
+  (name        vpnkit_dns)
   (libraries   re re.str ipaddr uri uri.services base64 cstruct result)
   (preprocess (pps ppx_cstruct)))
