--- a/vpnkit/src/hostnet/dune
+++ b/vpnkit/src/hostnet/dune
@@ -4,9 +4,9 @@
  (preprocess (pps ppx_inline_test))
  (libraries base64 cstruct logs ipaddr mirage-flow mirage-flow-combinators ppx_sexp_conv
    pcap-format ethernet arp tcpip.ipv4 tcpip.icmpv4 tcpip.udp
-   tcpip.tcp tcpip.stack-direct charrua charrua-server dns dns_lwt ofs luv
+   tcpip.tcp tcpip.stack-direct charrua charrua-server vpnkit_dns dns_lwt ofs luv
    luv_unix lwt.unix threads astring fs9p dns_forward tar
-   mirage-vnetif uuidm cohttp-lwt mirage-channel ezjsonm
+   mirage-vnetif uuidm cohttp-lwt cohttp-mirage mirage-channel ezjsonm
    duration mirage-time mirage-clock
    mirage-random tcpip.checksum forwarder cstructs sha)
  (foreign_stubs (language c) (names stubs_utils))
