--- a/vpnkit/src/dns/dune
+++ b/vpnkit/src/dns/dune
@@ -1,4 +1,5 @@
 (library
   (name        vpnkit_dns)
+  (public_name vpnkit.vpnkit_dns)
   (libraries   re re.str ipaddr uri uri.services base64 cstruct result)
   (preprocess (pps ppx_cstruct)))
