--- a/vpnkit/src/forwarder/dune
+++ b/vpnkit/src/forwarder/dune
@@ -1,3 +1,4 @@
 (library
  (name forwarder)
+ (public_name vpnkit.forwarder)
  (libraries cstruct cstructs ipaddr mirage-flow mirage-flow-combinators mirage-channel))
