--- a/vpnkit/src/dns_forward/dune
+++ b/vpnkit/src/dns_forward/dune
@@ -1,5 +1,6 @@
 (library
  (name dns_forward)
+ (public_name vpnkit.dns_forward)
  (libraries lwt logs vpnkit_dns astring result cstruct fmt ipaddr
    mirage-flow mirage-flow-combinators mirage-time mirage-channel mirage-clock
    sexplib duration)
