--- a/vpnkit/src/hostnet/dune
+++ b/vpnkit/src/hostnet/dune
@@ -1,5 +1,6 @@
 (library
  (name hostnet)
+ (public_name vpnkit.hostnet)
  (inline_tests)
  (preprocess (pps ppx_inline_test))
  (libraries base64 cstruct logs ipaddr mirage-flow mirage-flow-combinators ppx_sexp_conv
