--- a/shark.opam
+++ b/shark.opam
@@ -12,7 +12,7 @@ maintainer:"patrick@sirref.org"
 depends: [
   "dune" {>= "3.3"}
   "ocaml"
-  "obuilder"
+  # "obuilder"
   "obuilder-spec"
   "cmarkit"
   "yaml"
@@ -24,6 +24,23 @@ depends: [
   "htmlit"
   "routes"
   "code-mirror"
+
+  # Container-image deps / OBuilder
+  "mirage-crypto-rng"
+  "xdg"
+  "extunix"
+  "sha"
+  "sqlite3"
+  "tar"       {= "dev"}
+  "tar-unix"  {= "dev"}
+  "tar-eio"   {= "dev"}
+  "mirage-crypto-rng-eio" {= "0.11.2"}
+  "osrelease"   {= "dev"}
+  "tls-eio"
+  "progress"
+  "digestif"
+  "ppx_deriving_yojson"
+  "crunch"
 
   "patdiff"   {with-test}
   "mdx"       {with-test}
@@ -49,4 +66,10 @@ build: [
 ]
 pin-depends:[
   [ "code-mirror.dev" "git+https://github.com/patricoferris/jsoo-code-mirror#0cd3d0aa4ca454ece5b59f45a8caadb8e1874151"]
+  # For container-image
+  [ "mirage-crypto-rng.0.11.2" "git+https://github.com/dinosaure/mirage-crypto.git#parallel"]
+  [ "tar.dev"        "git+https://github.com/samoht/ocaml-tar.git#eio-0.12"]
+  [ "tar-unix.dev"        "git+https://github.com/samoht/ocaml-tar.git#eio-0.12"]
+  [ "tar-eio.dev"    "git+https://github.com/samoht/ocaml-tar.git#eio-0.12"]
+  [ "osrelease.dev"  "git+https://github.com/avsm/osrelease#5d2922cc56efd1ae88e75e800b2b6ba74d4181fa"]
 ]
