--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
         with:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
-      - run: opam install .
+      - run: opam install . --deps-only --with-test
+      - run: dune build @install @runtest
 
       - name: Cache runc
         id: cache-runc
