--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           ocaml-compiler: ${{ matrix.ocaml-compiler }}
 
       - run: opam install . --deps-only --with-test
-      - run: dune build @install @runtest
+      - run: opam exec -- dune build @install @runtest
 
       - name: Cache runc
         id: cache-runc
