--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: Main workflow
 on:
   pull_request:
   push:
+      branches:
+        - main
   schedule:
     # Prime the caches every Monday
     - cron: 0 1 * * MON
