--- a/src/lib/dune
+++ b/src/lib/dune
@@ -1,6 +1,16 @@
 (library
  (name shark)
- (libraries eio cohttp-eio str yaml lwt_eio cmarkit obuilder htmlit routes)
+ (libraries
+  eio
+  cohttp-eio
+  str
+  yaml
+  lwt_eio
+  cmarkit
+  obuilder
+  htmlit
+  routes
+  fpath)
  (preprocess
   (pps ppx_sexp_conv)))
 
