--- a/src/lib/dune
+++ b/src/lib/dune
@@ -2,6 +2,7 @@
 
 (library
  (name shark)
+ (public_name shark)
  (libraries
   eio
   cohttp-eio
@@ -15,14 +16,3 @@
   fpath)
  (preprocess
   (pps ppx_sexp_conv)))
-
-(rule
- (deps js/main.bc.js)
- (targets js.ml)
- (action
-  (with-stdout-to
-   js.ml
-   (progn
-    (echo "let editor_js = {js|")
-    (run cat js/main.bc.js)
-    (echo "|js}")))))
