Move libraries to correct stanzas

--- a/src/lib/server/dune
+++ b/src/lib/server/dune
@@ -14,4 +14,9 @@
 (library
  (name shark_server)
  (public_name shark.server)
- (libraries shark cohttp-eio))
+ (libraries
+   shark 
+   cohttp-eio
+   htmlit
+   routes
+   ))
