--- a/shark.opam
+++ b/shark.opam
@@ -16,7 +16,7 @@ depends: [
   "obuilder-spec"
   "cmarkit"
   "yaml"
-  "eio_main" {>= "1.0"}
+  "eio_posix" {>= "1.0"}
   "lwt_eio"
 
   # Markdown Server
