--- a/src/lib/dune
+++ b/src/lib/dune
@@ -3,6 +3,6 @@
 (library
  (name shark)
  (public_name shark)
- (libraries eio str yaml lwt_eio cmarkit obuilder fpath)
+ (libraries eio str yaml lwt_eio cmarkit obuilder fpath uri)
  (preprocess
   (pps ppx_sexp_conv)))
