--- a/shark.opam
+++ b/shark.opam
@@ -24,6 +24,8 @@ depends: [
   "htmlit"
   "routes"
   "code-mirror"
+  "magic-mime"
+  "csv"
 
   # Container-image deps / OBuilder
   "mirage-crypto-rng"
