Refactor AST into standalone library

--- a/shark.opam
+++ b/shark.opam
@@ -12,6 +12,8 @@ maintainer:"patrick@sirref.org"
 depends: [
   "dune" {>= "3.3"}
   "ocaml"
+
+  "shark-ast"
   # "obuilder"
   "obuilder-spec"
   "cmarkit"
